# g2o-demo-sparsify

./: CMakeLists.txt  README.md
src/: Config.cpp  Config.h  converter.cpp  converter.h  main (copy).cpp  main.cpp  optimizer.cpp  optimizer.h  sample.cpp  sample.h  simulator.cpp  simulator.h  sparsifier.cpp  sparsifier.h  stdafx.h  sugarCV.cpp  sugarCV.h  sugarVec.cpp  sugarVec.h
